fix: homepage image render on smaller screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -178,10 +178,17 @@ p.navbar-brand {
     position: relative;
 }
 
-.featured-image img {
-    height: inherit;
+.featured-image a {
+    display: block;
     width: 100%;
+    height: 100%;
+}
+
+.featured-image img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    object-position: center;
     opacity: 1;
     transition-property: transform, opacity;
     transition-duration: 250ms;
@@ -312,12 +319,10 @@ p.navbar-brand {
 
     .featured-image {
         width: 100%;
-        height: auto;
     }
 
     .featured-image img {
-        width: inherit;
-
+        width: 100%;
     }
 
     .post-image {
